# template-pdm-base

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
src/template_project_name/: __init__.py
src/template_project_name/cli/: __init__.py  version.py
src/template_project_name/utils/: helper.py
tests/: test_smoke.py
